--- a/Alpha_web/Aplicacion/templates/base.html
+++ b/Alpha_web/Aplicacion/templates/base.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ALPHA WEB</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/Main.css' %}">
-    <link rel="stylesheet" href="{% static 'css/Main2.css' %}">
-    <link rel="stylesheet" href="{% static 'css/Main3.css' %}">
-    <link rel="stylesheet" href="{% static 'css/Main4.css' %}">
-    <link rel="stylesheet" href="{% static 'css/Main5.css' %}">
-    <link rel="stylesheet" href="{% static 'css/CajaFuerte.css' %}">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>ALPHA WEB</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-</head>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'css/Main.css' %}">
+        <link rel="stylesheet" href="{% static 'css/Main2.css' %}">
+        <link rel="stylesheet" href="{% static 'css/Main3.css' %}">
+        <link rel="stylesheet" href="{% static 'css/Main4.css' %}">
+        <link rel="stylesheet" href="{% static 'css/Main5.css' %}">
+        <link rel="stylesheet" href="{% static 'css/Main6.css' %}">
+        <link rel="stylesheet" href="{% static 'css/CajaFuerte.css' %}">
+        
+    </head>
 <body>
     <div class="navbar">
         <div class="nav-links">
@@ -27,6 +28,7 @@
                 <a href="{% url 'Logout' %}">Cerrar Sesión</a>
             {% else %}
                 <a href="{% url 'Registro' %}">Regístrate</a>
+                <a href="{% url 'RegistroEmpresas' %}">Regístrate</a>
                 <a href="{% url 'Inicio_Sesión' %}">Iniciar Sesión</a>
                 <a href="{% url 'Contraseñas' %}">Contraseñas</a>
             {% endif %}
@@ -54,30 +56,23 @@
         {% block content %}{% endblock %}
     </div>
 
-    <footer class="footer">
-        <hr>
-        <div class="footer-container">
-            <div class="footer-column">
-                <h2>Sobre Nosotros</h2>
-                <div class="text">ALPHA WEB es una empresa dedicada a brindar soluciones tecnológicas innovadoras para mejorar la calidad de vida.</div>
-            </div>
-            
-            <div class="footer-column">
-                <h2>Enlaces Rápidos</h2>
-                <ul class="inf">
-                    <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="{% url 'Planes' %}">Nuestros Planes</a></li>
-                    {% if request.session.usuario_id %}
-                        <li><a href="{% url 'CajaFuerte' %}">Caja Fuerte</a></li>
-                        <li><a href="{% url 'Contraseñas' %}">Contraseñas</a></li>
-                        <li><a href="{% url 'Logout' %}">Cerrar Sesión</a></li>
-                    {% else %}
-                        <li><a href="{% url 'Registro' %}">Registro</a></li>
-                        <li><a href="{% url 'Inicio_Sesión' %}">Iniciar Sesión</a></li>
-                        <li><a href="{% url 'Contraseñas' %}">Contraseñas</a></li>
-                    {% endif %}
-                </ul>
-            </div>
+    <div class="footer-column">
+        <h2>Enlaces Rápidos</h2>
+        <ul class="inf">
+            <li><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'Planes' %}">Nuestros Planes</a></li>
+            {% if request.session.usuario_id %}
+                <li><a href="{% url 'CajaFuerte' %}">Caja Fuerte</a></li>
+                <li><a href="{% url 'Contraseñas' %}">Contraseñas</a></li>
+                <li><a href="{% url 'Logout' %}">Cerrar Sesión</a></li>
+            {% else %}
+                <li><a href="{% url 'Registro' %}">Registro</a></li>
+    <li><a href="{% url 'RegistroEmpresas' %}">RegistroEmpresas</a></li>
+                <li><a href="{% url 'Inicio_Sesión' %}">Iniciar Sesión</a></li>
+                <li><a href="{% url 'Contraseñas' %}">Contraseñas</a></li>
+            {% endif %}
+        </ul>
+    </div>
     
             <div class="footer-column">
                 <h2>Contacto</h2>
