--- a/Alpha_web/Aplicacion/static/css/Main5.css
+++ b/Alpha_web/Aplicacion/static/css/Main5.css
@@ -1,4 +1,4 @@
-.StyleContraseña{
+.StyleContrasena{
     background-image: url("../img/Registro.jpg");
     background-size: cover;
     background-repeat: no-repeat;
