--- a/Alpha_web/Aplicacion/templates/Inicio.html
+++ b/Alpha_web/Aplicacion/templates/Inicio.html
@@ -30,7 +30,7 @@
         <a href="Planes">Nuestros Planes</a>
         <a href="Registro">Registrate</a>
         <a href="Inicio_Sesión">Iniciar Sesión</a>
-        <a href="Contraseñas">Contraseñas</a>
+        <a href="Contrasenas">Contrasenas</a>
         
         <div class="search-container">
             <form action="/search" method="get">
@@ -83,7 +83,7 @@
                     <li><a href="Planes.html">Nuestros Planes</a></li>
                     <li><a href="Registro.html">Registro</a></li>
                     <li><a href="Inicio_Sesión.html">Iniciar Sesión</a></li>
-                    <li><a href="Contraseñas.html">Contraseñas</a></li>
+                    <li><a href="Contrasenas.html">Contrasenas</a></li>
                 </ul>
             </div>
     
