fix: :art: fondos

--- a/Alpha_web/Aplicacion/static/css/Main.css
+++ b/Alpha_web/Aplicacion/static/css/Main.css
@@ -93,7 +93,7 @@
     display: none;
 }
 .StyleHome {
-    background-image: url("../img/Fondo.jpg");
+    background-image: url("../img/Aleatorio.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
