style: :art: Actualización de estilos

--- a/Alpha_web/Aplicacion/static/css/CajaFuerte.css
+++ b/Alpha_web/Aplicacion/static/css/CajaFuerte.css
@@ -4,7 +4,7 @@
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: #f8f7f7;
-    background-image: url("../img/Registro.jpg");
+    background-image: url("../img/Aleatorio.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
