--- a/Alpha_web/Aplicacion/static/css/Main2.css
+++ b/Alpha_web/Aplicacion/static/css/Main2.css
@@ -1,5 +1,5 @@
 .StylePlan {
-    background-image: url("../img/Fondo3.jpg");
+    background-image: url("../img/Aleatorio.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
