--- a/Alpha_web/Aplicacion/static/css/Main3.css
+++ b/Alpha_web/Aplicacion/static/css/Main3.css
@@ -1,5 +1,5 @@
 .StyleRegistro {
-    background-image: url("../img/Registro.jpg");
+    background-image: url("../img/Aleatorio.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
