--- a/Alpha_web/Aplicacion/templates/Inicio_Sesion.html
+++ b/Alpha_web/Aplicacion/templates/Inicio_Sesion.html
@@ -19,7 +19,7 @@
             {% endif %}
             
             <div class="imagen-container">
-                <img src="{% static 'Iconos/login.jpg' %}" alt="login" class="imagen">
+                <img src="{% static 'Iconos/usuario2.gif' %}" alt="login" class="imagen">
             </div>
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="contrasena" placeholder="Contrasena" required>
