--- a/Alpha_web/Aplicacion/static/css/Main2.css
+++ b/Alpha_web/Aplicacion/static/css/Main2.css
@@ -13,13 +13,13 @@
     padding: 20px;
     box-sizing: border-box;
     overflow-y: auto;
-    overflow-x: hidden; /* Eliminate horizontal scrollbar */
-    width: 100%; /* Ensure full width */
+    overflow-x: hidden; 
+    width: 100%; 
 }
 
 body {
-    margin: 0; /* Remove default margin to avoid scrollbars */
-    overflow-x: hidden; /* Prevent horizontal scrolling */
+    margin: 0; 
+    overflow-x: hidden; 
 }
 
 .items{
