--- a/Alpha_web/Aplicacion/templates/registro.html
+++ b/Alpha_web/Aplicacion/templates/registro.html
@@ -40,7 +40,7 @@
         </fieldset>
     
         <center><button type="submit">Registrarse</button></center>
-        <h1>¿Ya tienes una cuenta? <a href="{% url 'Inicio_Sesion' %}">Inicia sesión aquí</a></h1>
+        <h1>¿Ya tienes una cuenta? <a href="{% url 'inicio_sesion' %}">Inicia sesión aquí</a></h1>
     </form>
 
 <script>
