--- a/Alpha_web/Aplicacion/templates/base.html
+++ b/Alpha_web/Aplicacion/templates/base.html
@@ -21,18 +21,18 @@
     <div class="navbar">
         <div class="nav-links">
             <a href="{% url 'home' %}">Home</a>
-            <a href="{% url 'Planes' %}">Nuestros Planes</a>
+            <a href="{% url 'planes' %}">Nuestros Planes</a>
             
             {% if request.session.usuario_id %}
-                <a href="{% url 'CajaFuerte' %}">Caja Fuerte</a>
-                <a href="{% url 'Contrasenas' %}">Contrasenas</a>
-                <a href="{% url 'Logout' %}">Cerrar Sesión</a>
-            
+                <a href="{% url 'caja_fuerte' %}">Caja Fuerte</a>
+                <a href="{% url 'contrasenas' %}">Contrasenas</a>
+                <a href="{% url 'cerrar_sesion' %}">Cerrar Sesión</a>
+
             {% else %}
                 <a href="{% url 'registro' %}">Regístrate</a>
-                <a href="{% url 'Inicio_Sesion' %}">Iniciar Sesión</a>
-                <a href="{% url 'Contrasenas' %}">Contrasenas</a>
-            
+                <a href="{% url 'inicio_sesion' %}">Iniciar Sesión</a>
+                <a href="{% url 'contrasenas' %}">Contrasenas</a>
+
             {% endif %}
         </div>
         
@@ -64,15 +64,15 @@
                 <h2>Enlaces Rápidos</h2>
                 <ul class="inf">
                     <li><a href="{% url 'home' %}">Home</a></li>
-                    <li><a href="{% url 'Planes' %}">Nuestros Planes</a></li>
+                    <li><a href="{% url 'planes' %}">Nuestros Planes</a></li>
                     {% if request.session.usuario_id %}
-                        <li><a href="{% url 'CajaFuerte' %}">Caja Fuerte</a></li>
-                        <li><a href="{% url 'Contrasenas' %}">Contraseñas</a></li>
-                        <li><a href="{% url 'Logout' %}">Cerrar Sesión</a></li>
+                        <li><a href="{% url 'caja_fuerte' %}">Caja Fuerte</a></li>
+                        <li><a href="{% url 'contrasenas' %}">Contraseñas</a></li>
+                        <li><a href="{% url 'cerrar_sesion' %}">Cerrar Sesión</a></li>
                     {% else %}
                         <li><a href="{% url 'registro' %}">Regístrate</a></li>
-                        <li><a href="{% url 'Inicio_Sesion' %}">Iniciar Sesión</a></li>
-                        <li><a href="{% url 'Contrasenas' %}">Contraseñas</a></li>
+                        <li><a href="{% url 'inicio_sesion' %}">Iniciar Sesión</a></li>
+                        <li><a href="{% url 'contrasenas' %}">Contraseñas</a></li>
                     {% endif %}
                 </ul>
             </div>
